# IDP

./: .env.sample  .gitignore  Dockerfile  Inference.ipynb  README.md  pipeline_test.ipynb  pyproject.toml  setup.cfg  trainAndTest.ipynb
.github/workflows/: deploy-model.yml  docker-image.yml
idp/: main.py
idp/annotations/: annotation_utils.py  bbox_utils.py  image_utils.py
idp/evaluate/: evaluate_utils.py
idp/model/: BoundingBox.py
idp/utils/: convertPdf.py  tessaractocr.py
notebooks/: Inference.ipynb  pipeline_test.ipynb  trainAndTest.ipynb
scripts/: build_dataset.py  extract_text_from_images.py  serve_local_files.sh
tests/: testData.json  test_annotations.py  test_bbox_utils.py  test_main.py
